Bug: 94520 -  [JA] Calendar: Suggestion Preferences pop-up window too wide to run over the screen size
Different issue - there is no maximum size specified for the Suggestions Preferences dialog, and the Japanese text is quite verbose, so the dialog expands to accomodate the text.
I've set a max-width on the dialog: on my Chome, English was at 581px, so I've set the dialog max-width to 600px.

https://bugzilla.zimbra.com/show_bug.cgi?id=94520

Copied from Perforce
 Change: 529227

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -3074,6 +3074,10 @@ HTML>BODY .appt-selected .appt_allday_body
 	max-height: 15rem;
 }
 
+.ZmTimeSuggestionPrefDialog {
+    max-width: 600px;
+}
+
 /* Make disabled inputs still readable in scheduler view */
 /* included 2 classes and a tag to make it more specific */
 .DwtInputField-disabled INPUT[type='text'].ZmSchedulerInput {
